commit avant remise pcb pour verification

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Altium Project
 
+History/
+Project Logs for KeyBored_PCB_Conn_ThomasLajoie_2025/
+Project Outputs for KeyBored_PCB_Conn_ThomasLajoie_2025/
+__Previews/
+
 # Ignore temporary and backup files
 *.bak             # Backup files
 *.temp            # Temporary files
